<resources>
    <string name="app_name">Adrocafe</string>
    <string name="adrocafe">ADROCAFE</string>
    <string name="sign_in">Sign In</string>
    <string name="logo">Logo</string>
    <string name="username_email">Username/Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset">Reset</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="food">Food</string>
    <string name="order">Order</string>
    <string name="credits">Credits</string>
    <string name="about">About</string>
    <string name="transaction_history">Transaction History</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="all">All</string>
    <string name="snacks">Snacks</string>
    <string name="beverages">Beverages</string>
    <string name="others">Others</string>
    <string name="view_cart">View Cart</string>
    <string name="open_bracket">(</string>
    <string name="closing_bracket">items in cart )</string>
    <string name="ruppee">₹</string>
    <string name="checkout"><![CDATA[Checkout >]]></string>
    <string name="left_hurry">left ! Hurry !</string>
    <string name="itemfood">itemfood</string>
    <string name="order_history">Order History</string>
    <string name="successful">Successful</string>
    <string name="refunds">Refunds</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="pay">Pay ></string>
    <string name="select_payment_mode">Select Payment Mode</string>
    <string name="deliver">Deliver</string>
    <string name="adrocafe_staff">Adrocafe Staff</string>
</resources>
