<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_food"
                android:title="@string/food"/>
        <item
                android:id="@+id/nav_orders"
                android:title="@string/order"/>
        <item
                android:id="@+id/nav_credits"
                android:title="@string/credits"/>
        <item
                android:id="@+id/nav_about"
                android:title="@string/about"/>
        <!--<item-->
                <!--android:id="@+id/nav_history"-->
                <!--android:title="@string/transaction_history"/>-->
        <item
                android:id="@+id/nav_settings"
                android:title="@string/settings"/>
    </group>

    <item android:title="">
        <menu xmlns:tools="http://schemas.android.com/tools">
            <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />
        </menu>
    </item>

</menu>
