<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.modules.landing.food.FoodFragment">


    <TextView
            android:text="@string/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_Menu" android:textColor="@color/colorText"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:textSize="18sp"/>

    <com.google.android.material.tabs.TabLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_Menu" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:tabTextColor="@color/colorTextLight"
            app:tabSelectedTextColor="@color/colorText" android:id="@+id/tabLayout_food">

        <com.google.android.material.tabs.TabItem android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  android:text="@string/all"/>
        <com.google.android.material.tabs.TabItem android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  android:text="@string/snacks"/>
        <com.google.android.material.tabs.TabItem android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  android:text="@string/beverages"/>
        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/others"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager.widget.ViewPager
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout_food"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            android:id="@+id/viewPager_food" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView_bottom"/>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/cardView_bottom" app:cardBackgroundColor="@color/colorAlternate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/view_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_view_cart"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/colorTextAlternate"/>
            <TextView
                    android:text="@string/open_bracket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_open_bracket"
                    app:layout_constraintStart_toEndOf="@+id/textView_view_cart" android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/textView_view_cart"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_view_cart"
                    android:textColor="@color/design_default_color_background"/>
            <TextView
                    android:text="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_item_qty"
                    app:layout_constraintStart_toEndOf="@+id/textView_open_bracket" android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_open_bracket"
                    app:layout_constraintTop_toTopOf="@+id/textView_open_bracket"
                    android:textColor="@color/design_default_color_background"/>
            <TextView
                    android:text="@string/closing_bracket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_closing_bracket"
                    app:layout_constraintStart_toEndOf="@+id/textView_item_qty" android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/textView_item_qty"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_item_qty"
                    android:textColor="@color/design_default_color_background"/>
            <TextView
                    android:text="@string/ruppee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_ruppee"
                    app:layout_constraintStart_toEndOf="@+id/textView_closing_bracket"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="@+id/textView_closing_bracket"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_closing_bracket"
                    android:textColor="@color/design_default_color_background"/>
            <TextView
                    android:text="60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_cost"
                    app:layout_constraintStart_toEndOf="@+id/textView_ruppee" android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/textView_ruppee"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_ruppee"
                    android:textColor="@color/design_default_color_background"/>
            <TextView
                    android:text="@string/checkout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_checkout"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@+id/textView_cost"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_cost"
                    app:layout_constraintStart_toEndOf="@+id/textView_cost" android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:textColor="@color/design_default_color_background"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>