<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable name="model" type="com.adrosonic.adrocafe.adrocafe.ui.modules.authentication.reset.ResetPasswordViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.modules.authentication.reset.ResetPasswordFragment">

        <TextView
                android:text="@string/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="24sp"
                android:textStyle="bold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/constraintLayout_password"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rectangle_round_grad">

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editText_new"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/new_password"
                    android:text="@={model.editTextNewPassword}"
                    android:background="@drawable/rectangle_round"
                    android:padding="10dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editText_confirm"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/editText_new"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:hint="@string/confirm_new_password"
                    android:text="@={model.editTextConfirmPassword}"
                    android:background="@drawable/rectangle_round"
                    android:padding="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
                android:text="@string/reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_reset"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:background="@drawable/rectangle_round_grad"
                android:textColor="@android:color/background_light"
                android:clickable="@{model.isResetEnable()}"
                android:onClick="@{() -> model.onResetClick(model.editTextNewPassword)}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
