<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.modules.cart.CartActivity" android:background="#F8F8F8">

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerView_order"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp">
    </androidx.recyclerview.widget.RecyclerView>

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cardView_credits"
            app:cardCornerRadius="10dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/cardView_bottom"
            app:cardElevation="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="#F0F0F0">

            <TextView
                    android:text="@string/select_payment_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_payement_mode" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0" android:textSize="18sp"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView_payement_mode"
                    android:id="@+id/view" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="#F6F6F6"/>

            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/view"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/cardView_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="@drawable/side_nav_bar">

            <TextView
                    android:text="@string/open_bracket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_open_bracket"
                    android:textColor="@color/design_default_color_background"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp" android:layout_marginStart="8dp"/>

            <TextView
                    android:text="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_item_qty"
                    app:layout_constraintStart_toEndOf="@+id/textView_open_bracket" android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_open_bracket"
                    app:layout_constraintTop_toTopOf="@+id/textView_open_bracket"
                    android:textColor="@color/design_default_color_background"/>
            <TextView
                    android:text="@string/closing_bracket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_closing_bracket"
                    app:layout_constraintStart_toEndOf="@+id/textView_item_qty" android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/textView_item_qty"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_item_qty"
                    android:textColor="@color/design_default_color_background"/>
            <TextView
                    android:text="@string/ruppee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_ruppee"
                    app:layout_constraintStart_toEndOf="@+id/textView_closing_bracket"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="@+id/textView_closing_bracket"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_closing_bracket"
                    android:textColor="@color/design_default_color_background" android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/textView_pay" android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.3"/>

            <TextView
                    android:text="60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_cost"
                    app:layout_constraintStart_toEndOf="@+id/textView_ruppee" android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/textView_ruppee"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_ruppee"
                    android:textColor="@color/design_default_color_background" android:textSize="18sp"/>

            <TextView
                    android:text="@string/pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_pay"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@+id/textView_cost"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_cost"
                    android:textColor="@color/design_default_color_background"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
